# ParFlow-EFDC

./: README-ParFlow-EFDC-Install.txt  README.md
src/: CMakeLists.txt  README.md
src/cmake/: Makefile.config.in  parflow_config.h.in
src/performance_tests/inactive_active_time/: crater2D.pfsol
src/pfsimulator/: CMakeLists.txt
src/pfsimulator/amps/win32/: freemc.bat  freemc.tcl  getmc.bat  getmc.tcl  run.bat  run.tcl  strip.tcl
src/pfsimulator/clm/: clm.F90  clm_coszen.F90  drv_getforce.F90  drv_readvegpf.F90
src/pfsimulator/efdc/: BAL2T2.f  CALAVB_ISFAVB_4.f  CMakeLists.txt  EFDC.F  Makefile.depend  PF_CALL_EFDC.F  Var_Global_Mod.F90  parallel_mpi.F90  parflow_efdc_config.F90.in
src/pfsimulator/parflow_exe/: CMakeLists.txt
src/pfsimulator/parflow_lib/: parflow_proto_f.h  solver_richards.c
src/pftools/: usergrid.c
src/pftools/chunk/ctb/: a14.ctb  aci_perm.ctb  cheshire.ctb  cheshire_SL.ctb  cheshire_T.ctb  cheshire_T2.ctb  cheshire_T3.ctb  cheshire_T34-160.ctb  cheshire_T34-80.ctb  cheshire_T4.ctb  cheshire_T5.ctb  cold10.ctb  cold20.ctb  cold40.ctb  cold5.ctb  cold5_shade2.ctb  cold5_shade3.ctb  cold5_shade4.ctb  cold5_shade5.ctb  colortable.f90  earthtone25.ctb  gray10.ctb  gray16.ctb  gray25_8bit.ctb  gray5.ctb  hot10.ctb  hot20.ctb  hot40.ctb  hot5.ctb  hot5_shade2.ctb  hot5_shade3.ctb  hot5_shade4.ctb  hot5_shade5.ctb  perm16.ctb  rainbow10.ctb  rainbow10_shade2.ctb  rainbow10_shade3.ctb  rainbow10_shade4.ctb  rainbow10_shade5.ctb  rainbow20.ctb  (+13 more)
src/pftools/chunk/ps/: chunk.ps
src/pftools/chunk/src/: GSview_exe.txt  chunk.ui.tcl  chunk_defaults.tcl  chunk_global.tcl  chunk_run_0701.tcl  getChunk.ui.tcl  getChunkErase.ui.tcl  getCoord.ui.tcl  getDotsColorScale.ui.tcl  getEPS.ui.tcl  getField.ui.tcl  getFieldContinuous.ui.tcl  getFieldCutoffs.ui.tcl  getFieldLegendCategorical.ui.tcl  getFieldLegendContinuous.ui.tcl  getFiles.ui.tcl  getLineColorScale.ui.tcl  getPlot.ui.tcl  getSurfaceFiles.ui.tcl  getSurfaces.ui.tcl  getText.ui.tcl  getTextEntry.ui.tcl  save_tcl_file.tcl
src/pftools/chunk/tcl/: chunk_input.tcl  crater2d.tcl  default_over.sat.tcl  default_over.tcl
src/pftools/chunk/test/: dots.txt  field_test.ascii  lines_file.slim  wells.lin
src/pftools/prepostproc/: BOV_vis_file.test.tcl  PFB-ReadFcn.R  PFB-WriteFcn.R  pf_solid_file_create.f90  pf_write.f90  pfb_read.matlab.m
src/test/input/: LW_test_data.csv  LW_test_data.txt  LW_test_data_clear.csv  crater2D.pfsol  small_domain.pfsol  stats4.txt  uvm.flow.KConditioningPts.txt
src/test/tcl/: BC_test.tcl  Evap_Trans_test.tcl  Forcing.00000.pfb  Forcing.00000.silo  Forcing.00005.pfb  LW_var_dz.tcl  LW_var_dz_spinup.tcl  clayL.tcl  flux.rain.sa  flux.rec.sa  overland_slopingslab_DWE.tcl  overland_slopingslab_KWE.tcl  overland_tiltedV_DWE.tcl  overland_tiltedV_KWE.tcl  pfmg_octree.tcl  samrai.tcl  samrai_compute_domain.tcl  terrain_following_grid_overland.tcl  var_dz_1D.tcl
src/test/tcl/clm/: clm.jac.tcl  clm.tcl  clm_4levels.tcl  clm_forc_veg.tcl  clm_samrai.tcl  clm_slope.tcl  clm_varDZ.tcl  clm_vtk.tcl
src/test/tcl/clm/eflx_lh_tot/: eflx_lh_tot.00001.bin.0  eflx_lh_tot.00001.bin.1  eflx_lh_tot.00001.bin.2  eflx_lh_tot.00001.bin.3  eflx_lh_tot.00001.bin.4  eflx_lh_tot.00001.bin.5  eflx_lh_tot.00001.bin.6  eflx_lh_tot.00001.bin.7  eflx_lh_tot.00001.bin.8  eflx_lh_tot.00002.bin.0  eflx_lh_tot.00002.bin.1  eflx_lh_tot.00002.bin.2  eflx_lh_tot.00002.bin.3  eflx_lh_tot.00002.bin.4  eflx_lh_tot.00002.bin.5  eflx_lh_tot.00002.bin.6  eflx_lh_tot.00002.bin.7  eflx_lh_tot.00002.bin.8  eflx_lh_tot.00003.bin.0  eflx_lh_tot.00003.bin.1  eflx_lh_tot.00003.bin.2  eflx_lh_tot.00003.bin.3  eflx_lh_tot.00003.bin.4  eflx_lh_tot.00003.bin.5  eflx_lh_tot.00003.bin.6  eflx_lh_tot.00003.bin.7  eflx_lh_tot.00003.bin.8  eflx_lh_tot.00004.bin.0  eflx_lh_tot.00004.bin.1  eflx_lh_tot.00004.bin.2  eflx_lh_tot.00004.bin.3  eflx_lh_tot.00004.bin.4  eflx_lh_tot.00004.bin.5  eflx_lh_tot.00004.bin.6  eflx_lh_tot.00004.bin.7  eflx_lh_tot.00004.bin.8  eflx_lh_tot.00005.bin.0  eflx_lh_tot.00005.bin.1  eflx_lh_tot.00005.bin.2  eflx_lh_tot.00005.bin.3  (+5 more)
src/test/tcl/clm/eflx_lwrad_out/: eflx_lwrad_out.00001.bin.0  eflx_lwrad_out.00001.bin.1  eflx_lwrad_out.00001.bin.2  eflx_lwrad_out.00001.bin.3  eflx_lwrad_out.00001.bin.4  eflx_lwrad_out.00001.bin.5  eflx_lwrad_out.00001.bin.6  eflx_lwrad_out.00001.bin.7  eflx_lwrad_out.00001.bin.8  eflx_lwrad_out.00002.bin.0  eflx_lwrad_out.00002.bin.1  eflx_lwrad_out.00002.bin.2  eflx_lwrad_out.00002.bin.3  eflx_lwrad_out.00002.bin.4  eflx_lwrad_out.00002.bin.5  eflx_lwrad_out.00002.bin.6  (+29 more)
(+427 files in other folders)
